CX2: Fix the transparency issue of link cards
The text on each of them were seen as overlapped.

--- a/modules/tools/styles/mw.cx.tools.LinkTool.less
+++ b/modules/tools/styles/mw.cx.tools.LinkTool.less
@@ -9,6 +9,7 @@
 	background-position: top left;
 	transition: margin 0.3s;
 	min-height: 100px;
+	z-index: 1;
 
 	.cx-widget-translationtool-header {
 		padding: 0;
